Runners: move to auto-detect and auto-enable JVM features, instead of asking users to do that